# krdsrw

./: .gitattributes  .pre-commit-config.yaml  .style.yapf  .sublimeformatter  LICENSE.md  README.md  __init__.py  krdsrw.sublime-project  pyproject.toml  pyrightconfig.json  pytest.ini
.hookspace/: environment.json  formatter.json
krdsrw/: .ignore  __init__.py  __main__.py  annotationstore.py  collections.py  constants.py  containers.py  cursor.py  error.py  fontprefs.py  kindleannotation.py  restricted.py  schemas.py  typehints.py  types.py  wrappedlist.py
krdsrw/datastore/: __init__.py  auto.py  compounds.py  constants.py  containers.py  containers_test.py  cursor.py  cursor_test.py  datastore.py  error.py  factory.py  keys.py  names.py  primitives.py  schemas.py  template.py  templatized.py  types.py  types_test.py  value.py
src/krdsrw/: __init__.py  __main__.py  basics.py  builtins.py  codegen.py  constants.py  containers.py  cursor.py  error.py  objects.py  restricted.py  schemas.py  specs.py  typehints.py  types.py  util.py
tests/: .gitignore  The Tempest.epub  The Tempest.yjr  basic_test.py  basics_test.py  builtins_test.py  collections_test.py  containers_test.py  cursor_test.py  datastore_test.py  objects_test.py  restricted_test.py  specs_test.py  the-tempest.kfx  the-tempest.yjf  types_test.py
